--- a/Front/src/styles/Filtro.css
+++ b/Front/src/styles/Filtro.css
@@ -1,12 +1,9 @@
 .contenedor-filtro {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     justify-content: center;
     background-size: cover;
-    max-width: 100%;
-    position: relative;
-    overflow: hidden;
+    background-color: #0066ff9f;
+    padding: 20px 90px 20px 90px;
 }
 
 
@@ -27,7 +24,6 @@
 
 .formulario-buscador {
     background: rgba(255, 255, 255, 0.6);
-    padding: 25px 20px;
     margin-top: 10px;
     border-radius: 8px;
     gap: 15px;
