--- a/Front/src/styles/Header.css
+++ b/Front/src/styles/Header.css
@@ -53,7 +53,7 @@
     margin-right: 10px;
 }
 
-.user span:hover {
+.user a:hover {
     color: #007bff;
     transform: scale(1.05);
     transition: color 0.3s, transform 0.3s;
