--- a/Front/src/styles/Paquete.css
+++ b/Front/src/styles/Paquete.css
@@ -2,16 +2,18 @@
     display: grid;
     grid-template-columns: 1fr 4fr;
     width: 100%;
+    padding-bottom: 10px;
   }
   
   
   .filters {
     width: 100%;
-    padding: 10px;
-    background-color: #f7f7f7;
+    padding: 8px;
+    background-color: #ffffff;
+    border: 1px solid #007bffb0;
     border-radius: 10px;
     align-self: start;
-    height: 87%;
+    height: auto;
     margin-top: 20px;
     margin-left: 20px;
   }
@@ -47,16 +49,24 @@
     display: flex;
     justify-content: space-between;
     background-color: #fff;
-    border: 1px solid #eaeaea;
+    border: 1px solid #007bffa5;
     border-radius: 10px;
     margin-bottom: 20px;
     padding: 20px;
     width: 100%;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
   
+  .hotel-card:hover {
+    transform: scale(1.01);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+  
   .hotel-card img {
-    max-width: 150px;
+    max-width: 300px;
+    aspect-ratio: 16/9;
     border-radius: 10px;
+    height: 100%;
   }
   
   .hotel-info {
@@ -90,4 +100,11 @@
     background-color: #0056b3;
     color: white;
 }
+
+
+.prueba {
+    display: flex;
+    width: 100%;
+    justify-content:flex-end;
+  }
   
