--- a/Front/src/styles/Paquete.css
+++ b/Front/src/styles/Paquete.css
@@ -8,14 +8,14 @@
   
   .filters {
     width: 100%;
-    padding: 8px;
+    padding: 20px;
     background-color: #ffffff;
-    border: 1px solid #007bffb0;
+    border: 1px solid #dbdbdb;
     border-radius: 10px;
     align-self: start;
     height: auto;
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 10px;
   }
   
   .filters h2 {
@@ -49,11 +49,12 @@
     display: flex;
     justify-content: space-between;
     background-color: #fff;
-    border: 1px solid #007bffa5;
+    border: 1px solid #dbdbdb;
     border-radius: 10px;
     margin-bottom: 20px;
     padding: 20px;
     width: 100%;
+    margin-left: 20px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
   
@@ -107,4 +108,11 @@
     width: 100%;
     justify-content:flex-end;
   }
+
+.fail {
+    font-size: 20px;
+    text-align: center;
+    margin-top: 100px;
+}
+
   
