--- a/Front/src/styles/Excursiones.css
+++ b/Front/src/styles/Excursiones.css
@@ -1,5 +1,7 @@
 .container-excursiones {
   display: flex;
+  flex-direction: column;
+  /* Asegurarse de que los elementos se apilen verticalmente */
   justify-content: center;
   width: 100%;
   padding-bottom: 10px;
