--- a/Front/src/styles/Excursiones.css
+++ b/Front/src/styles/Excursiones.css
@@ -1,7 +1,6 @@
 .container-excursiones {
   display: flex;
   flex-direction: column;
-  /* Asegurarse de que los elementos se apilen verticalmente */
   justify-content: center;
   width: 100%;
   padding-bottom: 10px;
@@ -10,9 +9,7 @@
 .excursiones-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* 3 columnas */
-  grid-gap: 20px;
-  /* Espacio entre las tarjetas */
+  grid-gap: 15px;
   width: 90%;
   margin-left: 50px;
   margin-top: 20px;
@@ -58,7 +55,7 @@
   color: white;
 }
 
-.prueba {
+.prueba2 {
   display: flex;
   width: 100%;
   justify-content: flex-end;
@@ -70,17 +67,16 @@
   margin-top: 100px;
 }
 
-/* Media queries para diseño responsive */
+
 @media (max-width: 1024px) {
   .excursiones-list {
     grid-template-columns: repeat(2, 1fr);
-    /* 2 columnas en pantallas medianas */
+
   }
 }
 
 @media (max-width: 768px) {
   .excursiones-list {
     grid-template-columns: 1fr;
-    /* 1 columna en pantallas pequeñas */
   }
 }
