--- a/Front/src/styles/Header.css
+++ b/Front/src/styles/Header.css
@@ -48,9 +48,11 @@
 }
 
 .user-icon {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%; 
     margin-right: 10px;
+    object-fit: cover;
 }
 
 .user a:hover {
