--- a/Front/src/styles/CardDetail.css
+++ b/Front/src/styles/CardDetail.css
@@ -251,9 +251,11 @@
 
 .comment-details {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
-/* Estilos para el botón de borrar comentario */
 .delete-button {
     background-color: red;
     color: white;
@@ -263,8 +265,18 @@
     margin-left: 10px;
     border-radius: 5px;
     font-size: 12px;
+    position: absolute;
+    right: 0; 
+    bottom: 0; 
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .delete-button:hover {
     background-color: darkred;
+}
+
+.trash-icon {
+    font-size: 14px;
 }
