--- a/Front/src/styles/Cliente/DetalleCliente.css
+++ b/Front/src/styles/Cliente/DetalleCliente.css
@@ -85,6 +85,7 @@
 .btn-admin {
   padding: 10px 20px;
   border: none;
+  margin-right: 20px;
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
