--- a/Front/src/styles/Header.css
+++ b/Front/src/styles/Header.css
@@ -3,10 +3,15 @@
 .header {
     font-family: 'Poppins', sans-serif;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 15px;
     background-color: #f8f9fa;
+}
+
+a{
+    color: black !important;
+    text-decoration: none !important; 
 }
 
 .logo img {
@@ -14,6 +19,12 @@
     height: 50px;
     object-fit: contain;
     vertical-align: middle;
+}
+
+.nav {
+    display: flex;
+    flex: 1;
+    justify-content: center;
 }
 
 .nav ul {
@@ -42,6 +53,8 @@
 .user {
     display: flex;
     align-items: center;
+    margin-left: auto; 
+    padding-left: 15px;
     font-weight: 600;
     color: #333;
 }
@@ -49,14 +62,38 @@
 .user-icon {
     width: 35px;
     height: 35px;
-    border-radius: 50%; 
+    border-radius: 50%;
     margin-right: 10px;
     object-fit: cover;
 }
 
 .user a:hover {
-    color: #007bff;
+    color: #007bff !important;
     transform: scale(1.05);
     transition: color 0.3s, transform 0.3s;
     cursor: pointer;
+}
+
+.boton-inicia_sesion{
+    text-decoration: none;
+}
+
+@media (max-width: 992px) {
+    .nav {
+        display: none;
+    }
+    
+    .navbar-toggler {
+        display: inline-block;
+    }
+
+    .offcanvas .navbar-nav .nav-link {
+        font-weight: 600;
+        color: #333;
+        transition: color 0.3s;
+    }
+
+    .offcanvas .navbar-nav .nav-link:hover {
+        color: #007bff;
+    }
 }
