--- a/Front/src/styles/Filtro.css
+++ b/Front/src/styles/Filtro.css
@@ -3,11 +3,9 @@
     justify-content: center;
     background-size: cover;
     background-size: contain;
-    background-image: url(https://cdn.discordapp.com/attachments/1032393755745058947/1295463636680183899/f16809b48f922043783c918ab7f469d7.jpg?ex=6710b847&is=670f66c7&hm=0aa88fe4c354cc01eccf1cf92a5143ff7720f356a9f23ab438bd9b94371472f4&);
+    background-image: url(https://res.cloudinary.com/dy8lzfj2h/image/upload/v1730385201/yn5rswhhqx3exh33iexv.jpg);
     padding: 20px 90px 20px 90px;
 }
-
-
 
 
 .content {
