--- a/Front/src/styles/Cliente/DetalleCliente.css
+++ b/Front/src/styles/Cliente/DetalleCliente.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 .profile-container {
   max-width: 800px;
   margin: 0 auto;
   background-color: #f9f9f9;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 3px 4px 8px rgba(0, 0, 0, 0.4);
   padding: 20px;
 }
 
@@ -71,11 +79,23 @@
 .btn.danger {
   background-color: #dc3545;
   color: white;
+  transition: 0.5s all;
+  font-weight: bold;
+}
+
+.btn.danger:hover {
+  scale: 1.1;
 }
 
 .btn.logout {
   background-color: #007bff;
   color: white;
+  transition: 0.5s all;
+  font-weight: bold;
+}
+
+.btn.logout:hover {
+  scale: 1.1;
 }
 
 .btn:hover {
@@ -91,4 +111,10 @@
   cursor: pointer;
   background-color: #ffffff;
   color: #007bff;
+  transition: 0.5s all;
+  font-weight: bold;
+}
+
+.btn-admin:hover {
+  scale: 1.1;
 }
