--- a/Front/src/styles/Paquete.css
+++ b/Front/src/styles/Paquete.css
@@ -109,7 +109,7 @@
     margin: 10px 0;
   }
 
-  .boton-ver {
+  .boton-ver-paquete {
     font-family: 'Poppins', sans-serif;
     display: inline-block;
     padding: 8px 16px;
