--- a/Front/src/styles/Card.css
+++ b/Front/src/styles/Card.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -7,7 +7,7 @@
 
 .card-list {
     display: flex;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     margin: 50px;
     gap: 30px;
@@ -15,54 +15,48 @@
 
 .card {
     background: #fff;
-    border-radius: 8px black;
+    border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    max-width: 250px;
-    transition: transform 0.2s;
-}
-
-.card:hover {
-    transform: scale(1.05);
+    width: 250px; 
+    height: auto; 
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .card-img {
     width: 100%;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
     height: 150px;
     object-fit: cover;
 }
 
 .card-body {
     padding: 15px;
-    text-align: center;
+    display: block;
+    height: calc(100% - 150px);
+    overflow: hidden;
 }
 
 .card-body h2 {
-    display: flex;
-    align-items: flex-start;
-    margin: 5px 0 5px 5px;
+    margin: 5px 0;
     font-size: 1.5em;
     color: #333;
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis;
 }
 
 .p-body {
-    display: flex;
-    align-items: flex-start;
-    margin: 0 0 0 5px;
+    margin: 10px 0;
     color: #777;
-    height: 40px;
-}
-
-.p-footer {
-    margin: 0 0 0 5px;
-    color: #777;
+    height: 60px;
+    overflow: hidden;
 }
 
 .card-footer {
-    margin-top: 60px;
+    margin-top: 10px;
     padding-top: 10px;
-    border-top: .5px solid rgb(153, 153, 153);
+    border-top: 0.5px solid rgb(153, 153, 153);
 }
 
 .card-footer p {
@@ -77,13 +71,28 @@
     color: #333;
 }
 
+.boton-ver {
+    margin-top: 10px;
+    width: 100%;
+    padding: 10px;
+    background-color: #0056b3;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.boton-ver:hover {
+    background-color: #00408a;
+}
+
 .offer-container {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-family: Arial, sans-serif;
-    margin-top:  40px;
+    margin-top: 40px;
     gap: 30px;
 }
 
@@ -96,12 +105,14 @@
     font-size: 12px;
     display: inline-block;
     padding: 8px 16px;
-    border: 1px solid#0056b3 ;
+    border: 1px solid #0056b3;
     border-radius: 20px;
     text-decoration: none;
     background: rgba(255, 255, 255, 0.6);
     font-weight: bold;
-    transition: background-color 0.3s, color 0.3s;
+    transition:
+        background-color 0.3s,
+        color 0.3s;
     color: #333;
     cursor: pointer;
 }
