arreglo bugs y agrego detalles

--- a/Front/src/styles/Tarjeta.css
+++ b/Front/src/styles/Tarjeta.css
@@ -102,9 +102,11 @@
 }
 
 .nombre {
+    display: flex;
     font-size: 1rem;
     margin: 0;
     text-transform: uppercase;
+    align-items:flex-start;
 }
 
 .grupo label {
