--- a/Front/src/styles/ReservarPaquete.css
+++ b/Front/src/styles/ReservarPaquete.css
@@ -72,7 +72,6 @@ button:hover {
     grid-template-columns: 1fr 1fr;
     justify-content: center;
     gap: 10px;
-    margin-top: 20px;
 }
 
 .input-reserva {
@@ -242,4 +241,8 @@ button:hover {
 /* Contenido del paquete */
 .datos-paquete p {
     margin: 5px 0;
+}
+
+.title_acompañantes{
+    margin-top: 10px;
 }
